--- a/css/main.css
+++ b/css/main.css
@@ -7,20 +7,28 @@ body {
 }
 .logo {
     width: 500px;
+    padding-top: 50px;
 
 }
 .welcome-sec {
-    padding: 50px;
-    text-align: center;
-}
-.about-sec {
+    background-color: bisque;
     text-align: center;
     padding: 50px;
 }
 .about-content {
-
-
+    grid-column-gap: 30px;
+    grid-row-gap: 16px;
+    grid-template-rows: auto;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-columns: 1fr;
+    max-width: 720px;
+    padding-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    display: grid;
+    position: relative;
 }
+
 .portfolio-grid {
     display: grid;
     /* Adjust columns based on screen size */
@@ -46,7 +54,6 @@ body {
 .case-study-data {
     display: none; 
 }
-
 /* --- 2. Global Modal Wrapper (Starts Hidden) --- */
 .modal-wrapper {
     position: fixed; /* Fixed position ensures it overlays the whole screen */
@@ -84,7 +91,6 @@ body {
     transform: scale(0.95);
     transition: transform 0.3s ease-out;
 }
-
 /* --- 5. Modal Close Button --- */
 #modal-close-btn {
     position: absolute;
